adding build in package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lab practicals 2022",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build":"browserify backgroundgenerator/script.js > backgroundgenerator/bundle.js && live-server"
   },
   "repository": {
     "type": "git",
