crud ops added with node

--- a/Node_MySQL/server/.env
+++ b/Node_MySQL/server/.env
@@ -1,6 +1,6 @@
-PORT=3000
-USERNAME = web_app
-PASSWORD = 123
+PORT=5000
+USERNAME = user_mac
+PASSWORD = 1234
 DATABASE = FSD_node_mysql
 DB_PORT = 3306
 HOST = localhost
